--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,21 +35,41 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.2.8
-  geolocator: ^10.1.0
   geocoding: ^2.1.0
-  http: ^1.1.0
+  http: ^0.13.4
   uuid: ^3.0.7
   custom_info_window: ^1.0.1
-  firebase_auth: ^4.16.0
-  firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
-  fluttertoast: ^8.2.4
   datetime_picker_formfield: ^2.0.1
   persistent_bottom_nav_bar: ^5.0.2
   font_awesome_flutter: ^10.7.0
-  firebase_database: ^10.4.0
   shimmer: ^3.0.0
+  liquid_swipe: ^3.0.0
+  smooth_page_indicator: ^1.0.0+2
+  get: ^4.6.5
+
+#  NEW
+  email_validator: ^2.1.17
+  intl_phone_field: ^3.2.0
+#  FIREBASE
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
+  firebase_database: ^10.4.0
+  firebase_storage: ^11.6.0
+  firebase_messaging: ^14.7.10
+  fluttertoast: ^8.2.4
+#  Goolge Maps
+  google_maps_flutter: ^2.2.8
+  geolocator: ^10.1.0
+  flutter_geofire: ^2.0.3
+#  flutter_polyline_points: ^2.0.0
+  location: ^5.0.3
+  geocoder2: ^1.4.0
+  provider: ^6.1.2
+  flutter_polyline_points: ^1.0.0
+  url_launcher: ^6.2.6
+
+
 
 dev_dependencies:
   flutter_test:
